@@ -1,3 +1,8 @@
+2005-08-28  Benhur Stein <benhur@inf.ufsm.br>
+	* General/PajeEntityInspector.{m,h,gorm}: size text fields according
+	  to contents size
+	* General/DataScanner.m: allow \n in strings
+
 2005-01-23 (1.3.3) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
 	* New official release 
 	  - statviewer available
